src/test/ui/pub/issue-33174-restricted-type-in-public-interface.stderr
error[E0446]: crate-visible type `Snail` in public interface
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:18:1
   |
LL | pub(crate) struct Snail;
   | ---------- `Snail` declared as crate-visible
...
LL | pub type Helix_pomatia = Shell<Snail>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak crate-visible type

error[E0446]: restricted type `sea::Turtle` in public interface
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:21:1
   |
LL |     pub(super) struct Turtle;
   |     ---------- `sea::Turtle` declared as restricted
...
LL | pub type Dermochelys_coriacea = Shell<sea::Turtle>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak restricted type

error[E0446]: private type `Tortoise` in public interface
  --> $DIR/issue-33174-restricted-type-in-public-interface.rs:24:1
   |
LL | struct Tortoise;
   | - `Tortoise` declared as private
...
LL | pub type Testudo_graeca = Shell<Tortoise>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0446`.
